@@ -208,3 +208,4 @@ Since I first released this library, there's been quite a few people who have su
 * Andrew Hunter
 * Simon Hürlimann
 * Nathan Smith
+* Cedric Maion
